deployment/kubernetes-single/jaeger-agent-daemon.yml
apiVersion: v1
kind: List
items:
- apiVersion: extensions/v1beta1
  kind: DaemonSet
  metadata:
    name: jaeger-agent
    labels:
      app: jaeger
      jaeger-infra: agent-daemonset
  spec:
    template:
      metadata:
        labels:
          app: jaeger
          jaeger-infra: agent-instance
      spec:
        containers:
        - name: agent-instance
          image: jaegertracing/jaeger-agent:1.6.0
          args: ["--config-file=/conf/agent.yaml"]
          volumeMounts:
          - name: jaeger-configuration-volume
            mountPath: /conf
          ports:
          - containerPort: 5775
            protocol: UDP
          - containerPort: 6831
            protocol: UDP
          - containerPort: 6832
            protocol: UDP
          - containerPort: 5778
            protocol: TCP
        hostNetwork: true
        dnsPolicy: ClusterFirstWithHostNet
        volumes:
          - configMap:
              name: jaeger-configuration
              items:
                - key: agent
                  path: agent.yaml
            name: jaeger-configuration-volume
- apiVersion: v1
  kind: Service
  metadata:
    name: agent
    labels:
      app: jaeger
      name: jaeger-agent-service
      jaeger-infra: agent-service
  spec:
    ports:
    - port: 6831
      name: agent-udp
    selector:
      jaeger-infra: agent-daemonset
