deployment/kubernetes-single/traefik-daemonset.yml
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: traefik-ingress-controller
  namespace: kube-system
  labels:
    k8s-app: traefik-ingress-lb
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: traefik-ingress-lb
  template:
    metadata:
      labels:
        k8s-app: traefik-ingress-lb
        name: traefik-ingress-lb
    spec:
      serviceAccountName: traefik-ingress-controller
      terminationGracePeriodSeconds: 60
      containers:
      - image: traefik
        name: traefik-ingress-lb
        ports:
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443
        - name: admin
          containerPort: 8080
        args:
        - --api
        - --kubernetes
        - --logLevel=INFO
        volumeMounts:
          - name: traefik-frontend-volume
            mountPath: /frontend
            readOnly: true
          - name: traefik-backend-volume
            mountPath: /backend
            readOnly: true
      volumes:
          - name: traefik-frontend-volume
            secret:
              secretName: frontend-secret
          - name: traefik-backend-volume
            secret:
              secretName: backend-secret
---
kind: Service
apiVersion: v1
metadata:
  name: traefik-ingress-service
  namespace: kube-system
spec:
  selector:
    k8s-app: traefik-ingress-lb
  ports:
    - protocol: TCP
      port: 80
      name: web
    - protocol: TCP
      port: 443
      name: web-tls
    - protocol: TCP
      port: 8080
      name: admin
  type: NodePort
