deployment/kubernetes-single/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: worker-service-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
    nginx.ingress.kubernetes.io/grpc-backend: "true"
spec:
  rules:
  - host: frontend.local
    http:
      paths:
      - backend:
          serviceName: worker-service
          servicePort: grpc
  tls:
   - secretName: frontend-secret
     hosts:
       - frontend.local
