deployment/kubernetes-single/worker-writer.yml
apiVersion: v1
kind: List
items:
- apiVersion: extensions/v1beta1
  kind: Deployment
  metadata:
    name: worker-writer-jaeger
    labels:
      app: t-race
      t-race: worker-writer
  spec:
    replicas: 1
    strategy:
      type: Recreate
    template:
      metadata:
        labels:
          app: t-race
          t-race: worker
      spec:
        containers:
        - image: t-race/writer-jaeger:0.2.0
          imagePullPolicy: Never
          name: writer
          args: ["--config=/conf/writer.yaml"]
          volumeMounts:
          - name: writer-worker-config-volume
            mountPath: /conf
          ports:
          - containerPort: 5656
            protocol: TCP
        - image: t-race/worker:0.2.0
          imagePullPolicy: Never
          name: worker
          args: ["--config=/conf/worker.yaml"]
          volumeMounts:
          - name: writer-worker-config-volume
            mountPath: /conf
          - name: worker-certs-volume
            mountPath: /certs
            readOnly: true
          ports:
          - containerPort: 7887
            protocol: TCP
        volumes:
          - configMap:
              name: t-bench-configuration
              items:
                - key: writer
                  path: writer.yaml
                - key: worker
                  path: worker.yaml
            name: writer-worker-config-volume
          - name: worker-certs-volume
            secret:
              secretName: backend-secret
- apiVersion: v1
  kind: Service
  metadata:
    name: worker-service
    labels:
      app: t-race
      name: t-race-worker-service
      t-race: worker-service
  spec:
    ports:
    - name: grpc
      port: 7887
    type: NodePort
    selector:
      t-race: worker
- apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    name: worker-service-ingress
    annotations:
      kubernetes.io/ingress.class: traefik
  spec:
    rules:
    - host: frontend.local
      http:
        paths:
        - backend:
            serviceName: worker-service
            servicePort: 7887
    tls:
     - secretName: frontend-secret
